src/App.css
.App {
	text-align: center;
	overflow: hidden;
	font-family: "Inter";
}

.App-logo {
	height: 40vmin;
	pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
	.App-logo {
		animation: App-logo-spin infinite 20s linear;
	}
}

.App-header {
	background-color: #282c34;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: white;
}

.App-link {
	color: #61dafb;
}

@keyframes App-logo-spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

@media (max-width: 40rem) {
	.nav-link {
		color: white !important;
		font-size: 1.25rem;
	}
	.nav-search-bar {
		/* margin-top: 1.5rem; */
		display: none !important;
	}

	/* .collections-dropdown {
		display: inline-block !important;
		border: 1px solid red;
		width: 100% !important;
		height: 100px;
		color: white !important;
		background-color: transparent !important;
		position: absolute !important;
		z-index: 998 !important;
	}
	.collection-dropdown-item {
		display: inline-block !important;
		background-color: transparent !important;
		color: white !important;
		border: 1px solid white !important;
		z-index: 999 !important;
		font-size: 1rem;
	} */
}

.collection-dropdown-item {
	background: #282c34 !important;
	color: white !important;
	border: 1px solid white !important;
	/* border-radius: 5% !important; */
	/* background-color: #282c34; */
}

.collections-dropdown {
	width: 100%;
	text-align: start;
	position: absolute;
	top: 39px;
	/* border: 1px solid white;
	border-radius: 5% !important; */
	/* margin-top: 38px;
	margin-right: 40px; */
	z-index: 10;
}

.tableRow {
	align-self: center;
}

input:focus {
	outline: none !important;
	border-color: white !important;
	box-shadow: none !important;
}

.trending-card-img-top {
	width: 100%;
	height: 100% !important;
	object-fit: cover !important;
}

.card-img-top {
	width: 100%;
	height: 15vw;
	object-fit: cover;
}

.sidebar {
	/* position: relative; */
	top: 0;
	height: 100vh;
	overflow-y: auto;
}
.collection-main-view {
	top: 0;
	height: 100vh;
	overflow-y: auto;
}

.collection-banner-img {
	width: 100%;
	height: 15vw;
	overflow: hidden;
}

.nft-card-img {
	width: 100%;
}

.collection-stats {
	text-align: center;
	font-size: smaller;
}

.main-logo {
	z-index: 999 !important;
}

.contact-form {
	text-align: left;
	margin-left: 15%;
	margin-right: 15%;
}

.beat-once {
	--fa-animation-iteration-count: 1;
	cursor: pointer;
}

.flip-icon {
	transform: rotate(180deg);
	-webkit-transform: rotate(180deg);
}

.details-card {
	transition: all 0.2s ease-in-out;
}

.details-card:hover {
	transform: scale(1.03);
}

.filter-icon {
	border-radius: 50%;
	position: fixed;
	right: 10%;
	bottom: 10%;
	z-index: 999;
	box-shadow: 1px 0px 10px 0px gray;
}

.trait-category {
	/* background: transparent !important;
  color: white !important; */
	cursor: pointer;
}

/* Hide number input arrows on Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

/* Hide number input arrows on Firefox */
input[type="number"] {
	-moz-appearance: textfield;
}
/* Hide chromecast button for video files */
video::-internal-media-controls-overlay-cast-button {
	display: none;
}

.moon-logo-initials {
	z-index: 999 !important;
}

.test-container {
	height: 87vh;
}

.metadata-warning {
	display: flex;
	justify-content: start;
	align-items: center;
	cursor: pointer;
}

.main-collection-content {
	height: 86vh;
}

.collection-column {
	width: 40%;
}

.how-it-works-section {
	margin-top: 50px;
	margin-bottom: 50px;
}

.how-it-works-content {
	margin-top: 30px;
}

.nav-test {
	display: block;
	padding-right: 0.5rem;
	padding-left: 0.5rem;
	align-self: center;
	text-decoration: none;
	color: whitesmoke;
	/* color: #1982fc; */

	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
		border-color 0.15s ease-in-out;
	transition-property: color, background-color, border-color;
	transition-duration: 0.15s, 0.15s, 0.15s;
	transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
	transition-delay: 0s, 0s, 0s;
}

.nav-test:hover {
	/* color: #9e86ff; */
	color: #1982fc;
}

.nav-test.active {
	/* color: #9e86ff; */
	color: #1982fc;
}

